# edl2ffmpeg

./: .#timings-comparison  .dockerignore  .envrc  .gitignore  .mcp.json  CLAUDE.md  CMakeLists.txt  DOCKER_MCP_SETUP.md  ENCODER_MATCHING.md  FFMPEG_API_FLOW.md  FFMPEG_PLATFORM_DIFFERENCES.md  GPU_ACCELERATION.md  NIX_README.md  README.md  brightness_50percent.json  brightness_linear_50percent.json  build-nix.sh  check_cuda_ffmpeg.sh  claude_desktop_config.example.json  default.nix  diagnose_videotoolbox.sh  docker-compose.yml  flake.nix  hardware_acceleration_fixes.patch  linux_info.txt  macos_info.txt  nvenc_fix.patch  package-lock.json  shell.nix  test2_simple.json  test_async_performance.sh  test_cuda_decode.sh  test_gpu_passthrough.sh  test_hardware_acceleration.sh  test_nvenc_pipeline.cpp  test_nvenc_simple.sh  test_performance.sh  test_simple.json  test_simple1.json  test_simple2.json  (+5 more)
.serena/: project.yml
backup_local_files/: test_simple.json  test_simple1.json  test_simple2.json  test_simple3.json
build-internal/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-internal/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_edl_parser
docs/: EDL-FORMAT.md  EXTERNAL-COMPOSITOR-FORMAT.md  FTV-TOOLS-DOCUMENTATION.md  GPU_ACCELERATION.md  IMPLEMENTATION_PLAN.md  NVENC_CLEANUP_FIX.md  UNSUPPORTED_EDL_FEATURES.md  hardware-acceleration-cleanup.md
scripts/: build-nix.sh  ftv_toffmpeg_wrapper_full.sh
src/: main.cpp
src/compositor/: CompositorInstruction.h  FrameCompositor.cpp  FrameCompositor.h  InstructionGenerator.cpp  InstructionGenerator.h
src/edl/: EDLParser.cpp  EDLParser.h  EDLTypes.h
src/media/: FFmpegCompat.cpp  FFmpegCompat.h  FFmpegDecoder.cpp  FFmpegDecoder.h  FFmpegEncoder.cpp  FFmpegEncoder.h  HardwareAcceleration.cpp  HardwareAcceleration.h  HardwareContextManager.cpp  HardwareContextManager.h  MediaTypes.h
src/utils/: FrameBuffer.cpp  FrameBuffer.h  Logger.cpp  Logger.h  PixelFormatUtils.h  Timer.h
tests/: CMakeLists.txt  README.md  TESTING_STATUS.md  TEST_HANDOFF.md  compare_outputs.sh  generate_references.sh  run_tests.sh  test_edl_parser.cpp
tests/approval/fixtures/: complex_effects.json  contrast_150percent.json  contrast_50percent.json  fade_in.json  fade_in_out.json  fade_out.json  five_clips.json  framerate_24to30.json  framerate_60to30.json  multiple_seeks.json  resolution_480to1080.json  seek_middle.json  single_clip.json  two_clips.json
tests/fixtures/: .gitignore  fixtures.json  generate_fixtures.sh
tests/integration/: main.cpp
tests/integration/approval/: test_clips.cpp  test_effects.cpp  test_transitions.cpp
tests/integration/approval/fixtures/: README.md  generate_fixtures.sh
tests/integration/common/: EDLGenerator.cpp  EDLGenerator.h  TestRunner.cpp  TestRunner.h  VideoComparator.cpp  VideoComparator.h
tests/integration/generative/: test_random_edls.cpp
tests/sample_edls/: brightness_current_impl.json  brightness_linear_50percent.json  brightness_simple.json  brightness_time_varying.json  multiple_clips_with_effects.json  reference_compliant_av.json  reference_compliant_effects.json  simple_single_clip.json
